src/_less/fancy.less
// Fancy frames
.frame
{
	display: inline-block;

	background: darken(@background-color, 1%);
	border: 1px solid @shadow-color;

	img, span
	{
		display: block;
	}
}
a.frame
{
	text-align: center;
	vertical-align: top;
	//line-height: 1em;
	color: inherit;
}
a.frame:hover
{
	border: 1px solid lighten(@shadow-color, 15%);

}
a.frame:hover img,
a:not(.frame):hover img.frame
{
	opacity: .85;
}



// No select fix
.no-select {
	.no-select();
}



// NProgress color adjustments
#nprogress
{
	.bar,.spinner
	{
		z-index: 90;
	}
	.bar
	{
		background: @accent1-color;
	}
	.peg
	{
		box-shadow: 0 0 10px @accent1-color, 0 0 5px @accent1-color;
	}
	.spinner
	{

	}
	.spinner-icon
	{
		display: block;
		border-top-color: @accent1-color;
		border-left-color: @accent1-color;
	}
}



//::-moz-selection{background-color: fade(@accent3-color, 75%);color: white;}
//::selection{background-color: fade(@accent3-color, 75%);color: white;}



// Badges
.badge
{
	padding-right: 1em;
	border: 1px solid #000;
	//font-size: x-small;
	background: #ccc;
	color: #000;
	border-radius: 5px 0 0 5px;
}
a.badge:link,
a.badge:visited,
a.badge:hover,
a.badge:active
{
	color: #000;
	text-decoration: none;
}
a.badge:hover,
a.badge:active
{
	box-shadow: 0 0 10px rgba(0,0,0,.5);
}
.badge:before
{
	padding: 0 .75em;
	margin-right: 1em;
	content: "›››";
	background: #000;
	color: #fff;
	box-shadow: 0 0 5px #000;
}
.badge[data-name]:before
{
	content: attr(data-name);
}
.badge-1
{
	background: fade(@accent1-color, 50%);
}
.badge-2
{
	background: fade(@accent2-color, 50%);
}




// Waiting for content
.waiting
{
	margin: auto;
	width: 70px;
	text-align: center;
	
	& > div
	{
		width: 18px;
		height: 18px;
		background-color: #333;

		border-radius: 100%;
		display: inline-block;
		-webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
		animation: sk-bouncedelay 1.4s infinite ease-in-out both;
	}

	.bounce1
	{
		-webkit-animation-delay: -0.32s;
		animation-delay: -0.32s;
	}
	.bounce2
	{
		-webkit-animation-delay: -0.16s;
		animation-delay: -0.16s;
	}
}



@-webkit-keyframes sk-bouncedelay {
  0%, 80%, 100% { -webkit-transform: scale(0) }
  40% { -webkit-transform: scale(1.0) }
}

@keyframes sk-bouncedelay {
  0%, 80%, 100% { 
	-webkit-transform: scale(0);
	transform: scale(0);
  } 40% { 
	-webkit-transform: scale(1.0);
	transform: scale(1.0);
  }
}

